# rpg-ai-kbase

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/api/: debug_routes.py  deps.py  ingest_routes.py  openai_routes.py
app/core/: config.py  memvid_client.py
app/ingest/: md_ingest.py  pdf_ingest.py
app/models/: openai.py
app/rag/: ollama_client.py  pipeline.py
app/utils/: text.py
data/md/: 00_test_rag.md
memvid_store/: knowledge.mv2
